@@ -42,7 +42,7 @@ typedef enum {
 	STAT_LARGEST_ARMY,
 	STAT_LONGEST_ROAD,
 	STAT_CHAPEL,
-	STAT_UNIVERSITY_OF_CATAN,
+	STAT_UNIVERSITY,
 	STAT_GOVERNORS_HOUSE,
 	STAT_LIBRARY,
 	STAT_MARKET,
