@@ -32,7 +32,7 @@ typedef enum {
 	DEVEL_MONOPOLY,
 	DEVEL_YEAR_OF_PLENTY,
 	DEVEL_CHAPEL,
-	DEVEL_UNIVERSITY_OF_CATAN,
+	DEVEL_UNIVERSITY,
 	DEVEL_GOVERNORS_HOUSE,
 	DEVEL_LIBRARY,
 	DEVEL_MARKET,
