@@ -47,7 +47,7 @@
  *		1 = DEVEL_MONOPOLY,
  *		2 = DEVEL_YEAR_OF_PLENTY,
  *		3 = DEVEL_CHAPEL,
- *		4 = DEVEL_UNIVERSITY_OF_CATAN,
+ *		4 = DEVEL_UNIVERSITY,
  *		5 = DEVEL_GOVERNORS_HOUSE,
  *		6 = DEVEL_LIBRARY,
  *		7 = DEVEL_MARKET,
